feedback pages March 12 - spacing too big

--- a/src/image.html
+++ b/src/image.html
@@ -4,7 +4,7 @@ title: "YAYImages - HTML Template - Image Page"
 ---
 
 <main class="image">
-  <section class="py-16">
+  <section class="py-12">
     <div class="container mx-auto">
       <div class="flex gap-16">
         <div class="w-[600px]">
@@ -32,7 +32,7 @@ title: "YAYImages - HTML Template - Image Page"
             Want to <span class="text-gradient-1">Download?</span> Subscribe and
             Gain Access to Millions of Stock Assets:
           </div>
-          <ul class="flex flex-col gap-4">
+          <ul class="block-select flex flex-col gap-4">
             <li class="relative">
               <input
                 type="radio"
