--- a/src/pricing.html
+++ b/src/pricing.html
@@ -1,13 +1,14 @@
 ---
 layout: layouts/base.html
 title: "YAYImages - HTML Template - Pricing Page"
+activeMenu: "pricing"
 ---
 
 {% import "components/homepage/feature.html" as Feature %} {% import
 "components/button.html" as Button %}
 
-<main class="pricing pb-10">
-  <section class="py-16">
+<main class="pricing pb-32 flex flex-col gap-18">
+  <section class="pt-20">
     <div class="container mx-auto">
       <div class="md:mb-10">
         <h1 class="typography-h2 mb-10">
@@ -122,11 +123,11 @@ title: "YAYImages - HTML Template - Pricing Page"
     </div>
   </section>
 
-  <section class="-mt-16 md:mt-0 py-16">
+  <section>
     <div class="container mx-auto relative">
       <div class="grid md:grid-cols-2 gap-12 lg:gap-24">
         <div
-          class="shadow-carousel rounded-xl p-8 lg:p-10 flex flex-col gap-4 bg-white"
+          class="shadow-carousel rounded-xl p-7 lg:p-9 flex flex-col gap-4 bg-white"
         >
           <h3 class="typography-h3">Unlimited Plan 🚀</h3>
           <p class="[&>span]:text-brand-accent text-lg mb-2">
@@ -167,7 +168,7 @@ title: "YAYImages - HTML Template - Pricing Page"
           </div>
         </div>
         <div
-          class="shadow-carousel rounded-xl p-8 lg:p-10 flex flex-col gap-4 bg-white"
+          class="shadow-carousel rounded-xl p-7 lg:p-9 flex flex-col gap-4 bg-white"
         >
           <h3 class="typography-h3">Lifetime Membership 🔥</h3>
           <p class="[&>span]:text-brand-accent text-lg mb-2">
@@ -218,7 +219,7 @@ title: "YAYImages - HTML Template - Pricing Page"
     </div>
   </section>
 
-  <section class="py-16">
+  <section>
     <div class="container mx-auto relative">
       <div class="flex flex-col md:flex-row gap-6 md:gap-20 justify-between">
         <div class="md:max-w-[500px]">
@@ -243,10 +244,10 @@ title: "YAYImages - HTML Template - Pricing Page"
     </div>
   </section>
 
-  <section class="py-16">
+  <section>
     <div class="container mx-auto relative">
       <h3
-        class="typography-h3 flex flex-wrap items-center text-center justify-center mb-16"
+        class="typography-h3 flex flex-wrap items-center text-center justify-center mb-12"
       >
         With your Subscription you can:
       </h3>
