--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@ title: "YAYImages - HTML Template - Search Page"
               <span class="text-brand-accent">145+</span> countries
             </p>
 
-            {{ Button.btn("Start Downloading", "/create-account") }}
+            {{ Button.btn("Start Downloading", "/create-an-account") }}
           </div>
           <div class="flex flex-col md:flex-row md:items-baseline mt-32">
             <span
@@ -109,7 +109,7 @@ title: "YAYImages - HTML Template - Search Page"
             Create an account and have an smooth creative flow by downloading
             royalty-free images, videos and vectors for your projects
           </p>
-          <div>{{ Button.btn("Join Now", "/create-account") }}</div>
+          <div>{{ Button.btn("Join Now", "/create-an-account") }}</div>
         </div>
       </div>
     </div>
