--- a/src/pricing.html
+++ b/src/pricing.html
@@ -159,7 +159,7 @@ activeMenu: "pricing"
             </div>
             <div class="flex-1">
               <a
-                href="/create-account?test=1"
+                href="/create-an-account"
                 class="rounded-md py-2.5 lg:py-3.5 px-10 lg:px-14 bg-brand-accent text-white cursor-pointer hover:bg-brand-accentDark transition block text-center"
               >
                 Subsribe Now
@@ -207,7 +207,7 @@ activeMenu: "pricing"
             </div>
             <div class="flex-1">
               <a
-                href="/create-account"
+                href="/create-an-account"
                 class="rounded-md py-2.5 lg:py-3.5 px-10 lg:px-14 bg-brand-accent text-white cursor-pointer hover:bg-brand-accentDark transition block text-center"
               >
                 Subsribe Now
