fix: select radio on image page

--- a/src/image.html
+++ b/src/image.html
@@ -207,7 +207,7 @@ title: "YAYImages - HTML Template - Image Page"
                       Lifetime Membership 🔥
                     </h3>
                     <div
-                      class="hidden md:flex gap-4 items-end group-hover:-translate-x-3 transition duration-500"
+                      class="hidden md:flex gap-4 items-end group-hover:-translate-x-3 transition duration-500 h-0"
                     >
                       <div class="text-brand-body1 line-through">$199</div>
                       <div class="text-2xl text-gradient-1">$149</div>
